--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-text-loop-next": "^0.0.3",
+    "use-onclickoutside": "^0.4.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
